make sure buttons never ever wrap

--- a/app/assets/stylesheets/local/show-layout.scss
+++ b/app/assets/stylesheets/local/show-layout.scss
@@ -128,6 +128,7 @@
           border-radius: 2px;
 
           width: 100%;
+          white-space: nowrap;
           overflow: hidden;
           text-overflow: ellipsis;
         }
